<resources>
    <string name="app_name">Vaidik Sewa</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_my_booking">My Booking</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_about_us">About Us</string>
    <string name="menu_terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail_screen"></string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"
"
    </string>
    <string name="title_category">Category</string>
    <string name="title_activity_pandit_profile">PanditProfile</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="api_key">rzp_test_Qh9oorV5KDPZj4</string>
    <string name="logout">Logout</string>
    <string name="title_activity_popular_purohit_list">PopularPurohitList</string>
    <string name="title_activity_popular_pooja_list">PopularPoojaList</string>
</resources>
