<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home" />
        <item
                android:id="@+id/nav_categories"
                android:title="@string/menu_categories" />
        <item
                android:id="@+id/nav_my_bookings"
                android:title="@string/menu_my_booking" />
        <item
                android:id="@+id/nav_my_account"
                android:title="@string/menu_my_account" />

        <item
                android:id="@+id/nav_about_us"
                android:title="@string/menu_about_us" />
        <item
                android:id="@+id/nav_terms_conditions"
                android:title="@string/menu_terms_conditions" />
        <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/menu_privacy_policy" />

    </group>


</menu>
